--- a/mods/sovra/maps/oil-spill/rules.yaml
+++ b/mods/sovra/maps/oil-spill/rules.yaml
@@ -44,6 +44,7 @@ OILB:
 OILB.Husk:
 	Inherits: ^TechBuilding
 	Inherits@shape: ^2x2Shape
+    -Interactable:
 	Selectable:
 		Priority: 0
 		Bounds: 2048, 2048
