--- a/mods/sovra/rules/player.yaml
+++ b/mods/sovra/rules/player.yaml
@@ -119,6 +119,8 @@ Player:
 		InsufficientFundsTextNotification: Insufficient funds.
 		CashTickUpNotification: CashTickUp
 		CashTickDownNotification: CashTickDown
+        SelectableCash: 5000, 10000, 20000, 50000
+		DefaultCash: 10000
 	DeveloperMode:
 		CheckboxDisplayOrder: 10
 	GpsWatcher:
