--- a/mods/sovra/rules/ai.yaml
+++ b/mods/sovra/rules/ai.yaml
@@ -343,6 +343,7 @@ Player:
             e8: 15
 			dog: 15
 			shok: 15
+            snip: 15
 			harv: 10
             ahrv: 10
 			apc: 30
@@ -358,6 +359,7 @@ Player:
 			stnk: 5
 		UnitLimits:
 			dog: 4
+            snip: 2
 			harv: 8
             ahrv: 8
 			jeep: 4
@@ -382,6 +384,7 @@ Player:
             e8: 15
 			dog: 15
 			shok: 15
+            snip: 15
 			harv: 15
 			ahrv: 15
 			apc: 30
@@ -408,6 +411,7 @@ Player:
 			pt: 10
 		UnitLimits:
 			dog: 4
+            snip: 2
 			harv: 8
             ahrv: 8
 			jeep: 4
@@ -432,6 +436,7 @@ Player:
             e8: 15
 			dog: 15
 			shok: 15
+            snip: 15
 			harv: 15
             ahrv: 15
 			apc: 30
@@ -458,6 +463,7 @@ Player:
 			pt: 10
 		UnitLimits:
 			dog: 4
+            snip: 2
 			harv: 8
             ahrv: 8
 			jeep: 4
