--- a/mods/sovra/rules/ai.yaml
+++ b/mods/sovra/rules/ai.yaml
@@ -11,6 +11,9 @@ Player:
 	ModularBot@NavalAI:
 		Name: Naval AI
 		Type: naval
+	ModularBot@UnpluggedAI:
+		Name: Unplugged AI
+		Type: unplugged
 	GrantConditionOnBotOwner@rush:
 		Condition: enable-rush-ai
 		Bots: rush
@@ -23,8 +26,11 @@ Player:
 	GrantConditionOnBotOwner@naval:
 		Condition: enable-naval-ai
 		Bots: naval
+	GrantConditionOnBotOwner@unplugged:
+		Condition: enable-unplugged-ai
+		Bots: unplugged
 	SupportPowerBotModule:
-		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai
+		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai || enable-unplugged-ai
 		Decisions:
 			spyplane:
 				OrderName: SovietSpyPlane
@@ -105,7 +111,7 @@ Player:
 					TargetMetric: None
 					CheckRadius: 10c0
 	HarvesterBotModule:
-		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai
+		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai || enable-unplugged-ai
 		HarvesterTypes: harv, ahrv
 		RefineryTypes: proc, ercc
 	BaseBuilderBotModule@rush:
@@ -318,7 +324,7 @@ Player:
 			sam: 5
 			mslo: 1
 	BuildingRepairBotModule:
-		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai
+		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai || enable-unplugged-ai
 	SquadManagerBotModule@rush:
 		RequiresCondition: enable-rush-ai
 		SquadSize: 20
@@ -497,3 +503,124 @@ Player:
 		UnitLimits:
 			harv: 8
             ahrv: 8
+	BaseBuilderBotModule@unplugged:
+		RequiresCondition: enable-unplugged-ai
+		MinimumExcessPower: 80
+		MaximumExcessPower: 180
+		ExcessPowerIncrement: 40
+		ExcessPowerIncreaseThreshold: 4
+		StructureProductionInactiveDelay: 25
+		StructureProductionResumeDelay: 500
+        CheckForNewBasesDelay: 500
+		NewProductionCashThreshold: 4000
+		RallyPointScanRadius: 10
+		MaximumDefenseRadius: 24
+		MaxBaseRadius: 24
+        MaxResourceCellsToCheck: 8
+		ConstructionYardTypes: fact
+		RefineryTypes: proc,ercc
+		PowerTypes: powr,apwr
+		BarracksTypes: barr,tent
+		VehiclesFactoryTypes: weap
+		ProductionTypes: barr,tent,weap
+		SiloTypes: silo
+		DefenseTypes: hbox,pbox,gun,ftur,tsla,agun,sam
+		BuildingLimits:
+			proc: 3
+            ercc: 3
+			barr: 2
+			tent: 2
+			kenn: 1
+			dome: 1
+			weap: 1
+			atek: 1
+			stek: 1
+			fix: 1
+            hpad: 2
+            afld: 2
+		BuildingFractions:
+			proc: 30
+            ercc: 30
+			barr: 20
+			kenn: 1
+			tent: 20
+			weap: 10
+			pbox: 5
+            hbox: 5
+			gun: 5
+			tsla: 5
+			gap: 3
+			ftur: 10
+			agun: 3
+			sam: 3
+			atek: 1
+			stek: 1
+			fix: 1
+			dome: 5
+            hpad: 4
+            afld: 4
+			mslo: 1
+	McvManagerBotModule@unplugged:
+		RequiresCondition: enable-unplugged-ai
+		RestrictMCVDeploymentFallbackToBase: False
+		McvTypes: mcv
+        MaxBaseRadius: 24
+		ConstructionYardTypes: fact
+		McvFactoryTypes: weap
+	SquadManagerBotModule@unplugged:
+		RequiresCondition: enable-unplugged-ai
+		SquadSize: 15
+        SquadSizeRandomBonus: 40
+		AssignRolesInterval: 10
+		RushAttackScanRadius: 22
+        ProtectUnitScanRadius: 22
+		DangerScanRadius: 14
+		AttackScanRadius: 14
+		ProtectionScanRadius: 10
+		NavalUnitsTypes: seas, ss, msub, dd, ca, lst, pt
+		ExcludeFromSquadsTypes: harv, ahrv, mcv, dog, badr.bomber, u2
+		ConstructionYardTypes: fact
+		NavalProductionTypes: spen, syrd
+		AirUnitsTypes: mig, yak, heli, hind, mh60
+		ProtectionTypes: harv, ahrv, mcv, mslo, gap, spen, syrd, iron, pdox, tsla, agun, dome, pbox, hbox, gun, ftur, sam, atek, weap, fact, proc, ercc, silo, hpad, afld, afld.ukraine, powr, apwr, stek, barr, kenn, tent, fix, fpwr, tenf, syrf, spef, weaf, domf, fixf, fapw, atef, pdof, mslf, facf, prof, hpaf, aflf, stef, barf, irof, frcc
+		IgnoredEnemyTargetTypes: AirborneActor, IgnoreThis
+	UnitBuilderBotModule@unplugged:
+		IdleBaseUnitsMaximum: 16
+		RequiresCondition: enable-unplugged-ai
+		UnitsToBuild:
+			e1: 65
+			e2: 15
+			e3: 30
+			e4: 20
+            e8: 20
+			dog: 15
+            spy: 7
+			shok: 30
+            snip: 15
+			harv: 15
+            ahrv: 15
+			apc: 20
+			jeep: 20
+			arty: 15
+			v2rl: 30
+			ftrk: 30
+			1tnk: 30
+			2tnk: 50
+			3tnk: 50
+			4tnk: 25
+			ttnk: 25
+			stnk: 5
+            hind: 25
+            heli: 25
+            mh60: 25
+            yak: 25
+            mig: 25
+		UnitLimits:
+			dog: 6
+            spy: 1
+            snip: 2
+			harv: 8
+            ahrv: 8
+			jeep: 3
+			ftrk: 4
+            apc: 5
