Bot Income Insurance for custom AI
implement the Bot Income Insurance mechanic from CA mod, but only for the Unplugged AI.

--- a/mods/sovra/rules/defaults.yaml
+++ b/mods/sovra/rules/defaults.yaml
@@ -1502,3 +1502,15 @@
     CapturableProgressBlink:
 	Targetable@AIFixer:
 		TargetTypes: IgnoreThis
+
+# The Bot does not know how to sell up when he does not have an income. 
+# This provides an income, when floating less than 2500$
+^BotFallbackInsurance:
+	GrantConditionOnPlayerResources@botinsurance:
+		Condition: noinsurance
+		Threshold: 2500
+	CashTrickler@botinsurance:
+		Interval: 450
+		Amount: 500
+		ShowTicks: False
+		RequiresCondition: bot-insurance-enabler && !noinsurance
