--- a/mods/sovra/rules/player.yaml
+++ b/mods/sovra/rules/player.yaml
@@ -26,6 +26,7 @@ Player:
 		OnHoldAudio: OnHold
 		CancelledAudio: Cancelled
 		SpeedUp: True
+        BuildTimeSpeedReduction: 100, 90, 80, 70, 60, 50
 	ClassicProductionQueue@Defense:
 		Type: Defense
 		DisplayOrder: 1
@@ -40,6 +41,7 @@ Player:
 		OnHoldAudio: OnHold
 		CancelledAudio: Cancelled
 		SpeedUp: True
+        BuildTimeSpeedReduction: 100, 90, 80, 70, 60, 50
 	ClassicProductionQueue@Vehicle:
 		Type: Vehicle
 		DisplayOrder: 3
@@ -54,7 +56,7 @@ Player:
 		OnHoldAudio: OnHold
 		CancelledAudio: Cancelled
 		SpeedUp: True
-		BuildTimeSpeedReduction: 100, 75, 60, 50
+        BuildTimeSpeedReduction: 100, 90, 80, 70, 60, 50
 	ClassicProductionQueue@Infantry:
 		Type: Infantry
 		DisplayOrder: 2
@@ -69,6 +71,7 @@ Player:
 		OnHoldAudio: OnHold
 		CancelledAudio: Cancelled
 		SpeedUp: True
+        BuildTimeSpeedReduction: 100, 90, 80, 70, 60, 50
 	ClassicProductionQueue@Ship:
 		Type: Ship
 		DisplayOrder: 5
@@ -83,6 +86,7 @@ Player:
 		OnHoldAudio: OnHold
 		CancelledAudio: Cancelled
 		SpeedUp: True
+        BuildTimeSpeedReduction: 100, 90, 80, 70, 60, 50
 	ClassicProductionQueue@Aircraft:
 		Type: Aircraft
 		DisplayOrder: 4
@@ -97,6 +101,7 @@ Player:
 		OnHoldAudio: OnHold
 		CancelledAudio: Cancelled
 		SpeedUp: True
+        BuildTimeSpeedReduction: 100, 90, 80, 70, 60, 50
 	PlaceBuilding:
 		NewOptionsNotification: NewOptions
 		CannotPlaceNotification: BuildingCannotPlaceAudio
