--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -486,6 +486,7 @@ IRON:
 	WithBuildingBib:
 		HasMinibib: true
 	GrantExternalConditionPower@IRONCURTAIN:
+        OrderName: IronCurtain
 		PauseOnCondition: disabled
 		Icon: invuln
 		ChargeInterval: 3000
