--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -214,6 +214,7 @@ SPEN:
 		ProductionTypes: Ship
 	Production:
 		Produces: Ship, Submarine
+        PauseOnCondition: !build-incomplete
 	-SpawnActorsOnSell:
 	RepairsUnits:
 		HpPerStep: 1000
@@ -365,6 +366,7 @@ SYRD:
 		ProductionTypes: Ship, Boat
 	Production:
 		Produces: Ship, Boat
+        PauseOnCondition: !build-incomplete
 	-SpawnActorsOnSell:
 	RepairsUnits:
 		HpPerStep: 1000
@@ -1207,6 +1209,7 @@ WEAP:
 		ExitDelay: 3
 	Production:
 		Produces: Vehicle
+        PauseOnCondition: !build-incomplete
 	ProvidesPrerequisite:
 		Prerequisite: afldorweap
 	ProvidesPrerequisite@allies:
@@ -1344,6 +1347,7 @@ FACT:
 		Range: 4c0
 	Production:
 		Produces: Building, Defense
+        PauseOnCondition: !build-incomplete
 	Valued:
 		Cost: 2500
 	Tooltip:
@@ -1614,6 +1618,7 @@ HPAD:
 		DisableStop: false
 	Production:
 		Produces: Aircraft, Helicopter
+        PauseOnCondition: !build-incomplete
 	Reservable:
 	ProductionBar:
 		ProductionType: Aircraft
@@ -1704,6 +1709,7 @@ AFLD:
 		DisableStop: false
 	Production:
 		Produces: Aircraft, Plane, Helicopter
+        PauseOnCondition: !build-incomplete
 	Reservable:
 	ProvidesPrerequisite:
 		Prerequisite: airproduction
@@ -2051,6 +2057,7 @@ BARR:
 		ProductionTypes: Soldier, Infantry, Dog
 	Production:
 		Produces: Infantry, Soldier, Dog
+        PauseOnCondition: !build-incomplete
 	GrantExternalConditionToProduced:
 		Condition: produced
 	ProductionBar:
@@ -2174,6 +2181,7 @@ KENN:
 		ProductionTypes: Dog, Infantry
 	Production:
 		Produces: Infantry, Dog
+        PauseOnCondition: !build-incomplete
 	ProductionBar:
 		ProductionType: Infantry
 	-SpawnActorsOnSell:
@@ -2233,6 +2241,7 @@ TENT:
 		ProductionTypes: Soldier, Infantry
 	Production:
 		Produces: Infantry, Soldier
+        PauseOnCondition: !build-incomplete
 	GrantExternalConditionToProduced:
 		Condition: produced
 	ProductionBar:
