ai sonar spam fix
stop ai fail spamming sonar against structures.

--- a/mods/sovra/rules/ai.yaml
+++ b/mods/sovra/rules/ai.yaml
@@ -106,7 +106,7 @@ Player:
 					CheckRadius: 5c0
 				Consideration@2:
 					Against: Enemy
-					Types: WaterActor, Structure
+					Types: WaterStructure
 					Attractiveness: 1
 					TargetMetric: None
 					CheckRadius: 10c0
