--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -134,7 +134,7 @@ E2:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 40
-		Prerequisites: ~barr, fix, ~techlevel.infonly
+		Prerequisites: ~barr, fix, ~techlevel.medium
 		Description: Infantry armed with grenades.\n\n  Strong vs Buildings, Infantry\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 150
@@ -487,7 +487,7 @@ MEDI:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 40
-		Prerequisites: ~tent, dome, ~techlevel.infonly
+		Prerequisites: ~tent, dome, ~techlevel.medium
 		Description: Heals nearby infantry.\n\n  Unarmed
 	Valued:
 		Cost: 200
