scripts fix attempt

--- a/mod.config
+++ b/mod.config
@@ -21,7 +21,7 @@ ENGINE_VERSION="release-20231010"
 #  - Windows installers will be named as {PACKAGING_INSTALLER_NAME}-{TAG}.exe
 #  - macOS installers will be named as {PACKAGING_INSTALLER_NAME}-{TAG}.dmg
 #  - Linux .appimages will be named as {PACKAGING_INSTALLER_NAME}-${TAG}.AppImage
-PACKAGING_INSTALLER_NAME="ExampleMod"
+PACKAGING_INSTALLER_NAME="OpenRASovietMod"
 
 # The human-readable name for this project.
 # This is used in:
@@ -35,7 +35,7 @@ PACKAGING_INSTALLER_NAME="ExampleMod"
 #  - Windows desktop shortcut
 #  - Windows "Programs and Features" list
 #  - Linux launcher shortcut
-PACKAGING_DISPLAY_NAME="Example Mod"
+PACKAGING_DISPLAY_NAME="OpenRA Soviet Mod"
 
 # The URL for the project homepage.
 # This is used in:
