--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -304,6 +304,9 @@ SPEN:
 		ValidPowerStates: Low, Critical
 	GpsDot:
 		String: Naval
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 SYRD:
 	Inherits: ^Building
@@ -457,6 +460,9 @@ SYRD:
 		ValidPowerStates: Low, Critical
 	GpsDot:
 		String: Naval
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 IRON:
 	Inherits: ^ScienceBuilding
@@ -678,6 +684,9 @@ TSLA:
 		Range: 6c0
         RequiresCondition: !lowpower && !disabled && !build-incomplete
 	ProvidesPrerequisite@buildingname:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 AGUN:
 	Inherits: ^Defense
@@ -785,6 +794,9 @@ DOME:
 	ProvidesPrerequisite@buildingname:
 	ExternalCondition@JAMMED:
 		Condition: jammed
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 PBOX:
 	Inherits: ^Defense
@@ -848,6 +860,9 @@ PBOX:
 	DetectCloaked:
 		Range: 6c0
         RequiresCondition: loaded && !build-incomplete
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 HBOX:
 	Inherits: ^Defense
@@ -918,6 +933,9 @@ HBOX:
 		Amount: -20
 		RequiresCondition: !build-incomplete
 	-MustBeDestroyed:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 GUN:
 	Inherits: ^Defense
@@ -989,6 +1007,9 @@ GUN:
 		ValidPowerStates: Low, Critical
 	-BodyOrientation:
 	ClassicFacingBodyOrientation:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 FTUR:
 	Inherits: ^Defense
@@ -1041,6 +1062,9 @@ FTUR:
 	Explodes:
 		Weapon: BuildingExplode
 		EmptyWeapon: BuildingExplode
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 SAM:
 	Inherits: ^Defense
@@ -1101,6 +1125,9 @@ SAM:
 		RequiresCondition: !build-incomplete
 	-BodyOrientation:
 	ClassicFacingBodyOrientation:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 ATEK:
 	Inherits: ^ScienceBuilding
@@ -1158,6 +1185,9 @@ ATEK:
 		Amount: -200
 		RequiresCondition: !build-incomplete
 	ProvidesPrerequisite@buildingname:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 WEAP:
 	Inherits: ^Building
@@ -1288,6 +1318,9 @@ WEAP:
 	SequencePlaceBuildingPreview:
 		Sequence: place
 		SequenceAlpha: 0.65
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 FACT:
 	Inherits: ^Building
@@ -1664,6 +1697,9 @@ HPAD:
 		Proxy: aircraft.upgraded
 		Types: SpyInfiltrate
 		PlayerExperience: 10
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 AFLD:
 	Inherits: ^Building
@@ -1863,6 +1899,9 @@ AFLD:
 	ActorPreviewPlaceBuildingPreview:
 		Animated: false
     WithBuildingBib:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 AFLD.Ukraine:
 	Inherits: AFLD
@@ -2005,6 +2044,9 @@ STEK:
 		Amount: -100
 		RequiresCondition: !build-incomplete
 	ProvidesPrerequisite@buildingname:
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 BARR:
 	Inherits: ^Building
@@ -2106,6 +2148,9 @@ BARR:
 		TargetTypes: GroundActor, C4, DetonateAttack, Structure, SpyInfiltrate
 	ActorPreviewPlaceBuildingPreview:
 		Animated: false
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 KENN:
 	Inherits: ^Building
@@ -2290,6 +2335,9 @@ TENT:
 		TargetTypes: GroundActor, C4, DetonateAttack, Structure, SpyInfiltrate
 	ActorPreviewPlaceBuildingPreview:
 		Animated: false
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 FIX:
 	Inherits: ^Building
@@ -2344,6 +2392,9 @@ FIX:
 		TargetableOffsets: 840,0,0, 598,-640,0, 598,640,0, -1060,0,0, -768,-640,0, -768,640,0
 		Type: Polygon
 			Points: -1536,-300, -640,-811, 640,-811, 1536,-300, 1536,555, 640,1110, -640,1110, -1536,555
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 
 SBAG:
 	Inherits: ^Wall
@@ -2573,6 +2624,9 @@ ERCC:
 	Power:
 		Amount: -30
 		RequiresCondition: !build-incomplete
+	WithDeathAnimation:
+		DeathSequence: dead
+		UseDeathTypeSuffix: false
 	ProvidesPrerequisite@buildingname:
     ProvidesPrerequisite@refinerycopy:
         Prerequisite: proc
